--- a/src/main/res/values/base_ids.xml
+++ b/src/main/res/values/base_ids.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- 用于 ListView 的 Adapter 封装 -->
     <item name="base_item_tag_view_id" type="id" />
-    <item name="base_tag_multi_state_view" type="id" />
 
     <!--重试 text-->
     <item name="base_retry_tv" type="id" />
@@ -13,12 +13,11 @@
 
     <!--列表控件，如 RecyclerView-->
     <item name="base_list_layout" type="id" />
-
     <!--刷新控件，如下拉刷新 SwipeRefreshLayout-->
     <item name="base_refresh_layout" type="id" />
-
     <!--状态布局控件，如 multiStatusView-->
     <item name="base_state_layout" type="id" />
+    <item name="base_tag_multi_state_view" type="id" />
 
     <!--toolbar-->
     <item name="common_toolbar" type="id" />
