--- a/src/main/res/layout/base_fragment_list.xml
+++ b/src/main/res/layout/base_fragment_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.android.base.widget.SimpleMultiStateView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Base_SimpleMultiStateView">
+    style="@style/BaseArchStyle.SimpleMultiStateView">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@id/base_list_layout"
