--- a/src/main/res/layout/base_fragment_refresh_list.xml
+++ b/src/main/res/layout/base_fragment_refresh_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:srl_target_id="@id/base_list_layout">
 
-    <com.android.base.widget.SimpleMultiStateView style="@style/Base_SimpleMultiStateView">
+    <com.android.base.widget.SimpleMultiStateView style="@style/BaseArchStyle.SimpleMultiStateView">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@id/base_list_layout"
