--- a/src/main/res/layout/base_layout_empty.xml
+++ b/src/main/res/layout/base_layout_empty.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.percentlayout.widget.PercentRelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
         android:id="@id/base_retry_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        app:layout_marginTopPercent="25%"
         tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@id/base_retry_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/base_retry_icon"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginTop="3dp"
         android:gravity="center"
@@ -36,8 +32,6 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/base_retry_tv"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
 
-</androidx.percentlayout.widget.PercentRelativeLayout>
+</LinearLayout>
