--- a/src/main/res/layout/base_layout_no_network.xml
+++ b/src/main/res/layout/base_layout_no_network.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.percentlayout.widget.PercentRelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
         android:id="@id/base_retry_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:src="@drawable/base_img_no_network"
-        app:layout_marginTopPercent="25%"
         tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@id/base_retry_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/base_retry_icon"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginTop="3dp"
         android:gravity="center"
@@ -37,10 +33,8 @@
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/base_retry_tv"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="@string/base_error_retry_action_tips"
         android:textColor="@color/black" />
 
-</androidx.percentlayout.widget.PercentRelativeLayout>
+</LinearLayout>
